--- a/app/index.html
+++ b/app/index.html
@@ -54,46 +54,49 @@
 							</div>
 							<div class="tofu-box imgs">
 
-								<figure  class="slider-item" id-data="11">
-									<div class="img-content">
-										<div class="img-wrapper">
-											<div class="img" style="background-image: url('img/slider/wedding-2.jpg');"></div>
-											<div class="img mirror" style="background-image: url('img/slider/wedding-2.jpg');"></div>
+								<div class="slidermain-items">
+									<figure  class="slider-item" id-data="11">
+										<div class="img-content">
+											<div class="img-wrapper">
+												<div class="img" style="background-image: url('img/slider/wedding-1.jpg');"></div>
+												<div class="img mirror" style="background-image: url('img/slider/wedding-1.jpg');"></div>
+											</div>
 										</div>
-									</div>
-								</figure>
-								<figure  class="slider-item" id-data="12">
-									<div class="img-content">
-										<div class="img-wrapper">
-											<div class="img" style="background-image: url('img/slider/wedding-2.jpg');"></div>
-											<div class="img mirror" style="background-image: url('img/slider/wedding-2.jpg');"></div>
+									</figure>
+									<figure  class="slider-item" id-data="11">
+										<div class="img-content">
+											<div class="img-wrapper">
+												<div class="img" style="background-image: url('img/slider/wedding-2.jpg');"></div>
+												<div class="img mirror" style="background-image: url('img/slider/wedding-2.jpg');"></div>
+											</div>
 										</div>
-									</div>
-								</figure>
-								<figure  class="slider-item" id-data="13">
-									<div class="img-content">
-										<div class="img-wrapper">
-											<div class="img" style="background-image: url('img/slider/wedding-3.jpg');"></div>
-											<div class="img mirror" style="background-image: url('img/slider/wedding-3.jpg');"></div>
+									</figure>
+									<figure  class="slider-item" id-data="11">
+										<div class="img-content">
+											<div class="img-wrapper">
+												<div class="img" style="background-image: url('img/slider/wedding-3.jpg');"></div>
+												<div class="img mirror" style="background-image: url('img/slider/wedding-3.jpg');"></div>
+											</div>
 										</div>
-									</div>
-								</figure>
-								<figure  class="slider-item" id-data="14">
-									<div class="img-content">
-										<div class="img-wrapper">
-											<div class="img" style="background-image: url('img/slider/wedding-4.jpg');"></div>
-											<div class="img mirror" style="background-image: url('img/slider/wedding-4.jpg');"></div>
+									</figure>
+									<figure  class="slider-item" id-data="11">
+										<div class="img-content">
+											<div class="img-wrapper">
+												<div class="img" style="background-image: url('img/slider/wedding-4.jpg');"></div>
+												<div class="img mirror" style="background-image: url('img/slider/wedding-4.jpg');"></div>
+											</div>
 										</div>
-									</div>
-								</figure>
-								<figure  class="slider-item" id-data="15">
-									<div class="img-content">
-										<div class="img-wrapper">
-											<div class="img" style="background-image: url('img/slider/wedding-5.jpg');"></div>
-											<div class="img mirror" style="background-image: url('img/slider/wedding-5.jpg');"></div>
+									</figure>
+									<figure  class="slider-item" id-data="11">
+										<div class="img-content">
+											<div class="img-wrapper">
+												<div class="img" style="background-image: url('img/slider/wedding-5.jpg');"></div>
+												<div class="img mirror" style="background-image: url('img/slider/wedding-5.jpg');"></div>
+											</div>
 										</div>
-									</div>
-								</figure>
+									</figure>
+
+								</div>
 
 							</div>
 							<div class="wedding-info">
