--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 							<div class="tofu-box imgs">
 
 								<div class="slidermain-items">
-									<figure  class="slider-item" id-data="11">
+									<figure  class="slider-item" id-data="11" select-id="1">
 										<div class="img-content">
 											<div class="img-wrapper">
 												<div class="img" style="background-image: url('img/slider/wedding-1.jpg');"></div>
@@ -63,7 +63,7 @@
 											</div>
 										</div>
 									</figure>
-									<figure  class="slider-item" id-data="11">
+									<figure  class="slider-item" id-data="11" select-id="2">
 										<div class="img-content">
 											<div class="img-wrapper">
 												<div class="img" style="background-image: url('img/slider/wedding-2.jpg');"></div>
@@ -71,7 +71,7 @@
 											</div>
 										</div>
 									</figure>
-									<figure  class="slider-item" id-data="11">
+									<figure  class="slider-item" id-data="11" select-id="3">
 										<div class="img-content">
 											<div class="img-wrapper">
 												<div class="img" style="background-image: url('img/slider/wedding-3.jpg');"></div>
@@ -79,7 +79,7 @@
 											</div>
 										</div>
 									</figure>
-									<figure  class="slider-item" id-data="11">
+									<figure  class="slider-item" id-data="11" select-id="4">
 										<div class="img-content">
 											<div class="img-wrapper">
 												<div class="img" style="background-image: url('img/slider/wedding-4.jpg');"></div>
