--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 				<div class="page-content-size">
 					<div class="page-wrapper">
 
-						<div class="wedding-content">
+						<div class="wedding-content perspective-slides">
 							<div class="tofu-box desc">
 								<div class="person-info">
 									<div class="person-img">
