--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 				<div class="page-content-size">
 					<div class="page-wrapper">
 
-						<div class="wedding-content perspective-slides">
+						<div class="wedding-content">
 							<div class="tofu-box desc">
 								<div class="person-info">
 									<div class="person-img">
@@ -55,7 +55,14 @@
 							<div class="tofu-box imgs">
 
 								<div class="slidermain-items">
-
+									<figure class="slider-item" id-data="" figure-id="638286045322">
+									    <div class="img-content">
+									        <div class="img-wrapper">
+									           <div class="img" style="background-image: url('https://images.obi.ru/product/RU/1500x1500/385534_1.jpg');"></div>
+									           <div class="img mirror" style="background-image: url('https://images.obi.ru/product/RU/1500x1500/385534_1.jpg');"></div>
+									        </div>
+									    </div>
+									</figure>
 								</div>
 
 							</div>
